# flappy-bird-bevy

./: Cargo.toml  README.md
src/: audio.rs  background.rs  game_core.rs  game_state.rs  ingame_ui.rs  loading.rs  main.rs  mover.rs  pillars.rs  player.rs  score.rs  screen_end.rs  screen_start.rs
