[package]
name = "flappy_bird_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"

[dependencies.bevy]
version = "0.6.0"
default-features = false
# These are the remaining default features other than `bevy_audio` and `mp3`
features = [
  "render",
  "bevy_winit",
  "png",
  "x11"
]

[dependencies.bevy_kira_audio]
version = "0.8.0"
# enable the features you care about
features = [
  "wav",
  "ogg",
]
